--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
   <title>Gravel & Grit | Bristol Backyard Ultra 2026</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <link href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400;700&display=swap" rel="stylesheet">
   <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/45362f8425ca47e31537b996b/edd1ed29fee84874ad4fd0764.js");</script>
+
+  <script id="mcjs">
+    !function(c,h,i,m,p){
+      m=c.createElement(h),p=c.getElementsByTagName(h)[0],
+      m.async=1,m.src=i,p.parentNode.insertBefore(m,p)
+    }(document,"script","https://chimpstatic.com/mcjs-connected/js/users/45362f8425ca47e31537b996b/edd1ed29fee84874ad4fd0764.js");
+  </script>
 
   <style>
     :root {
@@ -18,9 +25,7 @@
       --slate-grey: #3E3E3E;
     }
 
-    html {
-      scroll-behavior: smooth;
-    }
+    html { scroll-behavior: smooth; }
 
     body {
       margin: 0;
@@ -34,7 +39,7 @@
     header {
       background-color: var(--earthy-green);
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 2.5rem 1rem;
     }
 
     header img {
@@ -44,8 +49,14 @@
 
     header h1 {
       margin: 0;
-      font-size: 2.2rem;
+      font-size: 2.3rem;
       color: var(--burnt-orange);
+    }
+
+    header p {
+      margin-top: 0.5rem;
+      color: var(--stone);
+      font-size: 1.1rem;
     }
 
     nav {
@@ -67,13 +78,12 @@
     nav a:hover,
     nav a:focus {
       color: var(--burnt-orange);
-      background-color: rgba(209, 124, 58, 0.15);
+      background-color: rgba(209,124,58,0.15);
       outline: none;
     }
 
     section {
       background-color: var(--stone);
-      color: var(--slate-grey);
       padding: 2rem 1rem;
       max-width: 800px;
       margin: 2rem auto;
@@ -83,13 +93,8 @@
 
     h2 {
       color: var(--earthy-green);
-      font-weight: bold;
       text-align: center;
       margin-bottom: 1rem;
-    }
-
-    .mailchimp-form input[type=email] {
-      color: var(--slate-grey) !important;
     }
 
     .image-gallery {
@@ -109,64 +114,65 @@
     footer {
       text-align: center;
       font-size: 0.85rem;
-      color: var(--slate-grey);
       margin-top: 3rem;
       padding-bottom: 2rem;
     }
 
-    footer a {
-      color: var(--slate-grey);
-      text-decoration: underline;
-    }
-
-    a:hover {
-      color: var(--burnt-orange);
-    }
-
     @media (max-width: 600px) {
-      header h1 {
-        font-size: 1.5rem;
-      }
-      nav a {
-        display: block;
-        margin: 0.5rem 0;
-      }
+      header h1 { font-size: 1.6rem; }
+      nav a { display: block; margin: 0.5rem 0; }
     }
   </style>
 </head>
 
 <body>
-  <header>
-    <img src="logo.jpeg" alt="Gravel & Grit Logo" />
-    <h1>Bristol Backyard Ultra — Coming Summer 2026</h1>
-  </header>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#course">Course</a>
-    <a href="#gallery">Photos</a>
-    <a href="#signup">Sign Up</a>
-    <a href="#community">What You'll Get</a>
-    <a href="#contact">Contact</a>
-  </nav>
+<header>
+  <img src="logo.jpeg" alt="Gravel & Grit Logo" />
+  <h1>Bristol’s First Backyard Ultra</h1>
+  <p>Saturday 2nd May 2026 · Blaise Castle Estate</p>
+</header>
 
-  <section id="about">
-    <h2>What is a Backyard Ultra?</h2>
-    <p>The Bristol Backyard Ultra is a last-runner-standing endurance race. You’ll run a 4.167-mile loop every hour, on the hour. Fall behind the clock, and you’re out. Keep going, and going, and going — until you’re the only one left.</p>
-    <p>Whether you're chasing victory or seeing how far your mind and body can take you, this race will test your limits in the most exhilarating way possible.</p>
-  </section>
+<nav>
+  <a href="#about">About</a>
+  <a href="#course">Course</a>
+  <a href="#gallery">Photos</a>
+  <a href="#signup">Updates</a>
+  <a href="#community">What You Get</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<section id="about">
+  <h2>What is a Backyard Ultra?</h2>
+  <p>
+    The Bristol Backyard Ultra is a last-runner-standing endurance event.
+    Runners complete a <strong>4.167-mile (6.7km) loop every hour, on the hour</strong>.
+    Finish the loop in time and you start again. Miss the bell, and your race is over.
+  </p>
+  <p>
+    There’s no set finish distance and no pressure to “go long”.
+    Run one loop or run all day — this event is about pacing, persistence, and seeing how far you want to go.
+  </p>
+</section>
 
 <section id="course">
   <h2>The Course</h2>
-  <p><strong>Venue TBC</strong> — but we’re scouting several brilliant spots within 30 minutes of Bristol.</p>
-  <p>We’re reaching out to a mix of council-owned woodlands, private farmland, and everything in between to secure the perfect location.</p>
-  <p>Accessibility is a priority — all potential venues are reachable by public transport, and there will be space for runners to set up personal aid stations and rest zones near the start/finish area.</p>
-  <p>Expect a 4.167-mile loop made up of runnable trails: grassy sections, woodland paths, and gentle hills. The terrain will be scenic and varied — just enough to stay interesting lap after lap.</p>
+  <p>
+    The course is a professionally measured 4.167-mile loop set entirely within
+    <strong>Blaise Castle Estate</strong>, one of central Bristol’s most beautiful wild spaces.
+  </p>
+  <p>
+    Expect a varied and runnable route featuring woodland trails, single track,
+    open green fields, and gentle climbs — interesting enough to stay engaging lap after lap.
+  </p>
+  <p>
+    The loop starts and finishes at a central basecamp area with space for personal kit,
+    crew support, and between-loop recovery.
+  </p>
 </section>
 
-
 <section id="gallery">
-  <h2>Photos of the team running a recent BYU in Brighton</h2>
+  <h2>Photos from recent Backyard Ultras</h2>
   <div class="image-gallery">
     <img src="night-running.JPEG" alt="Running at night with headtorches">
     <img src="running-open-field.JPEG" alt="Runner in open grassy field">
@@ -174,84 +180,50 @@
   </div>
 </section>
 
-  <section id="signup">
-    <h2>Sign Up for Updates</h2>
-    <div id="mc_embed_signup">
-      <form action="https://gravelandgritevents.us13.list-manage.com/subscribe/post?u=45362f8425ca47e31537b996b&amp;id=1cf3900049&amp;f_id=002437e5f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate mailchimp-form" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-          <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label>
-          <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required>
-          <div style="position: absolute; left: -5000px;" aria-hidden="true">
-            <input type="text" name="b_45362f8425ca47e31537b996b_1cf3900049" tabindex="-1" value="">
-          </div>
-          <div class="clear">
-            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-          </div>
-        </div>
-      </form>
-    </div>
-  </section>
+<section id="signup">
+  <h2>Stay in the Loop</h2>
+  <p style="text-align:center;">
+    Tickets are released in stages. Join the mailing list for early access,
+    event updates, and behind-the-scenes build-up.
+  </p>
 
-  <section id="community">
-    <h2>What You’ll Get</h2>
-    <ul>
-      <li><strong>✅ A professionally organised race</strong> — precise loop distance, clear markings, and on-the-hour starts.</li>
-      <li><strong>✅ Timing and results</strong> — live updates and full post-race breakdown of every Yard completed.</li>
-      <li><strong>✅ Simple, solid aid</strong> — water, snacks, and warm food for the long-haulers.</li>
-      <li><strong>✅ A community of legends</strong> — whether you’re a first-timer or an ultra veteran, you’ll feel welcome here.</li>
-      <li><strong>✅ Start/finish rest zone</strong> — set up camp and reset between Yards.</li>
-      <li><strong>🏅 Last one standing?</strong> — there can only be one winner, and we’ll honour that achievement in style.</li>
-    </ul>
-  </section>
+  <div id="mc_embed_signup">
+    <form action="https://gravelandgritevents.us13.list-manage.com/subscribe/post?u=45362f8425ca47e31537b996b&amp;id=1cf3900049&amp;f_id=002437e5f0"
+          method="post"
+          target="_blank"
+          novalidate>
+      <label>Email address</label>
+      <input type="email" name="EMAIL" required>
+      <input type="submit" value="Subscribe">
+    </form>
+  </div>
+</section>
 
-  <section id="faq">
-  <h2>FAQ</h2>
+<section id="community">
+  <h2>What You’ll Get</h2>
   <ul>
-    <li>
-      <strong>Can I bring a tent or set up a base camp?</strong>
-      <p>Yes! You’ll have a small space near the start/finish line to set up whatever you need between Yards — a tent, chair, snacks, or just a crate of bananas. It’s your personal reset zone.</p>
-    </li>
-    <li>
-      <strong>Is there a cut-off or finish time?</strong>
-      <p>Nope — the race continues until only one person completes a Yard. Whether that’s 12 hours or 48, we go until there’s a single runner left. Everyone else gets a DNF (with pride!).</p>
-    </li>
-    <li>
-      <strong>How far do people usually run?</strong>
-      <p>Anywhere from a single loop to 100+ miles. Whether you're aiming for your longest ever run or the win, you’ll be cheered on every Yard.</p>
-    </li>
-    <li>
-      <strong>Can I run as a team or relay?</strong>
-      <p>This event is solo only — but come as a crew, support your mates, and enjoy the community vibe. We’ve got space for everyone.</p>
-    </li>
-    <li>
-      <strong>Will there be toilets / water / aid?</strong>
-      <p>Yes, basic amenities will be available near the loop start. We’ll also provide snacks and warm food later in the race.</p>
-    </li>
-    <li>
-      <strong>Do I need trail shoes?</strong>
-      <p>We recommend trail shoes — the course will include grass, light trail and possibly a bit of gravel, depending on the venue.</p>
-    </li>
+    <li>Professionally organised Backyard Ultra with accurate loop distance</li>
+    <li>Fully marked course and on-the-hour starts</li>
+    <li>Central basecamp for kit, crew, and recovery</li>
+    <li>End-of-loop aid station with water, electrolytes, hot drinks, and snacks</li>
+    <li>Professional timing and safety cover throughout the event</li>
+    <li>Free professional photography</li>
+    <li>A supportive, inclusive, runner-first atmosphere</li>
   </ul>
 </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Have questions or want to get involved? Drop us a message anytime.</p>
-    <p>Email: <a href="mailto:info@gravelandgritevents.com">info@gravelandgritevents.com</a></p>
-  </section>
+<section id="contact">
+  <h2>Contact</h2>
+  <p style="text-align:center;">
+    Questions? Want to get involved?
+    <br>
+    Email us at <a href="mailto:info@gravelandgritevents.com">info@gravelandgritevents.com</a>
+  </p>
+</section>
 
-  <footer>
-    &copy; 2025 Gravel & Grit Events | Built with heart and grit.
-  </footer>
+<footer>
+  &copy; 2026 Gravel & Grit Events · Built with grit, community, and care.
+</footer>
 
-  <!-- Mailchimp Validation Script -->
-  <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-  <script type="text/javascript">
-    (function($) {
-      window.fnames = new Array(); window.ftypes = new Array();
-      fnames[0]='EMAIL';ftypes[0]='email';
-    }(jQuery));
-    var $mcj = jQuery.noConflict(true);
-  </script>
 </body>
 </html>
