--- a/index.html
+++ b/index.html
@@ -198,17 +198,29 @@
     </form>
   </div>
 </section>
-
+  
 <section id="community">
   <h2>What You’ll Get</h2>
   <ul>
-    <li>Professionally organised Backyard Ultra with accurate loop distance</li>
-    <li>Fully marked course and on-the-hour starts</li>
-    <li>Central basecamp for kit, crew, and recovery</li>
-    <li>End-of-loop aid station with water, electrolytes, hot drinks, and snacks</li>
-    <li>Professional timing and safety cover throughout the event</li>
-    <li>Free professional photography</li>
-    <li>A supportive, inclusive, runner-first atmosphere</li>
+    <li><strong>A properly delivered Backyard Ultra</strong> — an accurately measured 6.7km loop, clear course markings, and on-the-hour starts, every hour.</li>
+
+    <li><strong>Beautiful trail running in central Bristol</strong> — woodland paths, open fields, and varied terrain set within the historic Blaise Castle Estate.</li>
+
+    <li><strong>A fully supported event basecamp</strong> — space for your kit, chair, crew setup, or small tent, with a clearly defined start/finish area for smooth loop transitions.</li>
+
+    <li><strong>End-of-loop aid station</strong> — water, hot drinks, and essential snacks available at the end of every loop, day and night.</li>
+
+    <li><strong>Toilets available on site</strong> — permanent facilities within the estate, close to the event hub.</li>
+
+    <li><strong>Car parking nearby</strong> — convenient public parking within walking distance of the start/finish area.</li>
+
+    <li><strong>Free professional photography</strong> — high-quality images capturing the grit, determination, and atmosphere of the event.</li>
+
+    <li><strong>A welcoming environment for friends and family</strong> — a nearby café for food and coffee, plus a play park to keep supporters entertained while you run.</li>
+
+    <li><strong>An inclusive, runner-first atmosphere</strong> — whether this is your first ultra or your fiftieth, everyone is welcome and supported.</li>
+
+    <li><strong>A true Backyard Ultra experience</strong> — run, jog, or walk. Stop when you choose. The only requirement is completing each loop within the hour.</li>
   </ul>
 </section>
 
