--- a/index.html
+++ b/index.html
@@ -3,19 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>Gravel & Grit | Bristol Backyard Ultra 2026</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400;700&display=swap" rel="stylesheet">
-  <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-  <script id="mcjs">
-    !function(c,h,i,m,p){
-      m=c.createElement(h),p=c.getElementsByTagName(h)[0],
-      m.async=1,m.src=i,p.parentNode.insertBefore(m,p)
-    }(document,"script","https://chimpstatic.com/mcjs-connected/js/users/45362f8425ca47e31537b996b/edd1ed29fee84874ad4fd0764.js");
-  </script>
+  <link href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -111,6 +104,10 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
+    #tickets a:hover {
+      background-color: var(--burnt-orange);
+    }
+
     footer {
       text-align: center;
       font-size: 0.85rem;
@@ -137,7 +134,7 @@
   <a href="#about">About</a>
   <a href="#course">Course</a>
   <a href="#gallery">Photos</a>
-  <a href="#signup">Updates</a>
+  <a href="#tickets">Tickets</a>
   <a href="#community">What You Get</a>
   <a href="#contact">Contact</a>
 </nav>
@@ -163,7 +160,7 @@
   </p>
   <p>
     Expect a varied and runnable route featuring woodland trails, single track,
-    open green fields, and gentle climbs — interesting enough to stay engaging lap after lap.
+    open green fields, long flat sections, and short rolling hills.
   </p>
   <p>
     The loop starts and finishes at a central basecamp area with space for personal kit,
@@ -180,55 +177,53 @@
   </div>
 </section>
 
-<section id="signup">
-  <h2>Stay in the Loop</h2>
+<section id="tickets">
+  <h2>Enter the Bristol Backyard Ultra</h2>
+
   <p style="text-align:center;">
-    Tickets are released in stages. Join the mailing list for early access,
-    event updates, and behind-the-scenes build-up.
+    Tickets are now live. Run one loop or run all day — this is your race.
+    Secure your place at Bristol’s first Backyard Ultra at Blaise Castle Estate.
   </p>
 
-  <div id="mc_embed_signup">
-    <form action="https://gravelandgritevents.us13.list-manage.com/subscribe/post?u=45362f8425ca47e31537b996b&amp;id=1cf3900049&amp;f_id=002437e5f0"
-          method="post"
-          target="_blank"
-          novalidate>
-      <label>Email address</label>
-      <input type="email" name="EMAIL" required>
-      <input type="submit" value="Subscribe">
-    </form>
-  </div>
+  <p style="text-align:center; margin-top: 1.5rem;">
+    <a
+      href="https://race-nation.co.uk/register/gravel-grit-events/bristol-backyard-ultra"
+      target="_blank"
+      rel="noopener noreferrer"
+      style="
+        display:inline-block;
+        padding:0.8rem 1.6rem;
+        background-color: var(--earthy-green);
+        color: var(--stone);
+        font-weight:700;
+        text-decoration:none;
+        border-radius:6px;
+      "
+    >
+      Get Tickets on RaceNation
+    </a>
+  </p>
 </section>
-  
+
 <section id="community">
   <h2>What You’ll Get</h2>
   <ul>
     <li><strong>A properly delivered Backyard Ultra</strong> — an accurately measured 6.7km loop, clear course markings, and on-the-hour starts, every hour.</li>
-
     <li><strong>Beautiful trail running in central Bristol</strong> — woodland paths, open fields, and varied terrain set within the historic Blaise Castle Estate.</li>
-
-    <li><strong>A fully supported event basecamp</strong> — space for your kit, chair, crew setup, or small tent, with a clearly defined start/finish area for smooth loop transitions.</li>
-
-    <li><strong>End-of-loop aid station</strong> — water, hot drinks, and essential snacks available at the end of every loop, day and night.</li>
-
+    <li><strong>A fully supported event basecamp</strong> — space for your kit, chair, crew setup, or small tent.</li>
+    <li><strong>End-of-loop aid station</strong> — water, hot drinks, and essential snacks available at the end of every loop.</li>
     <li><strong>Toilets available on site</strong> — permanent facilities within the estate, close to the event hub.</li>
-
-    <li><strong>Car parking nearby</strong> — convenient public parking within walking distance of the start/finish area.</li>
-
-    <li><strong>Free professional photography</strong> — high-quality images capturing the grit, determination, and atmosphere of the event.</li>
-
-    <li><strong>A welcoming environment for friends and family</strong> — a nearby café for food and coffee, plus a play park to keep supporters entertained while you run.</li>
-
-    <li><strong>An inclusive, runner-first atmosphere</strong> — whether this is your first ultra or your fiftieth, everyone is welcome and supported.</li>
-
-    <li><strong>A true Backyard Ultra experience</strong> — run, jog, or walk. Stop when you choose. The only requirement is completing each loop within the hour.</li>
+    <li><strong>Car parking nearby</strong> — convenient public parking within walking distance.</li>
+    <li><strong>Free professional photography</strong> — capturing the grit and atmosphere of the event.</li>
+    <li><strong>A welcoming environment for friends and family</strong> — café and play park nearby.</li>
+    <li><strong>An inclusive, runner-first atmosphere</strong> — first ultra or fiftieth, everyone is welcome.</li>
   </ul>
 </section>
 
 <section id="contact">
   <h2>Contact</h2>
   <p style="text-align:center;">
-    Questions? Want to get involved?
-    <br>
+    Questions or want to get involved?<br>
     Email us at <a href="mailto:info@gravelandgritevents.com">info@gravelandgritevents.com</a>
   </p>
 </section>
