--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 <header>
   <img src="logo.jpeg" alt="Gravel & Grit Logo" />
-  <h1>Bristol’s First Backyard Ultra</h1>
+  <h1>Welcome to Bristol's first Backyard Ultra!</h1>
   <p>Saturday 2nd May 2026 · Blaise Castle Estate</p>
 
   <a
@@ -206,21 +206,36 @@
 <section id="about">
   <h2>What is a Backyard Ultra?</h2>
   <p>
-    The Bristol Backyard Ultra is a last-runner-standing endurance event.
-    Runners complete a <strong>4.167-mile (6.7km) loop every hour, on the hour</strong>.
+    The Bristol Backyard Ultra is not a typical ultramarathon. It is a simple, relentless 
+    test of patience, pacing, and mental resolve, set within the historic parkland and
+    woodland trails of Blaise Castle Estate in Bristol — close to the city, yet removed 
+    from it entirely. There is no finish line to chase, no target time, and no fixed 
+    distance. Just a loop, a bell, and one question asked again every hour: can you go again?
+    The event follows the classic Backyard Ultra (Last One Standing) format. 
+    Runners complete a 4.167-mile (6.7 km) trail loop every hour, on the hour. 
+    You have 60 minutes to complete each loop. Finish early and you rest. Finish late,
+    or fail to make the start line when the bell rings, and your race is over.
+    This repeats. Hour after hour. The event continues until only one runner remains. 
+    That final runner must complete one last solo loop to be crowned Last One Standing.
+    Every other participant, regardless of the distance they cover, is recorded as a DNF.
+    This is not a race about speed. It is about pacing, recovery, decision-making, and 
+    managing the mental challenge of repetition.
   </p>
 </section>
 
 <section id="course">
   <h2>The Course</h2>
   <p>
-    A professionally measured loop within <strong>Blaise Castle Estate</strong>,
-    featuring woodland trails, open fields, long flat sections, and short rolling hills.
+   The course winds through the varied trails of Blaise Castle Estate, combining woodland
+    paths, open parkland, and gently rolling terrain. Conditions will evolve as the hours
+    pass, with sections that feel forgiving early on and more demanding later. The loop 
+    is fully marked and easy to follow, with no navigation required, allowing runners to 
+    focus solely on completing each lap and returning to the start before the next bell.
   </p>
 </section>
 
 <section id="gallery">
-  <h2>Photos from recent Backyard Ultras</h2>
+  <h2>Photos from the team's recent Backyard Ultras</h2>
   <div class="image-gallery">
     <img src="night-running.JPEG">
     <img src="running-open-field.JPEG">
@@ -242,7 +257,7 @@
       class="hero-ticket-button"
       onclick="trackTicketClick('tickets_section')"
     >
-      Get Tickets on RaceNation
+      Tickets
     </a>
   </p>
 </section>
