--- a/index.html
+++ b/index.html
@@ -264,10 +264,51 @@
 
 <section id="community">
   <h2>What You’ll Get</h2>
+
   <ul>
-    <li>A true Backyard Ultra experience</li>
-    <li>Fully supported basecamp</li>
-    <li>Inclusive, runner-first atmosphere</li>
+    <li>
+      <strong>A true Backyard Ultra experience</strong><br>
+      A classic Last One Standing format, run to official Backyard Ultra standards.
+      One loop every hour, on the hour, until only one runner remains.
+    </li>
+
+    <li>
+      <strong>Fully supported race basecamp</strong><br>
+      A central start/finish area with space for crew, drop bags, chairs, and
+      personal setups — designed to make each hourly reset calm, efficient, and familiar.
+    </li>
+
+    <li>
+      <strong>Medical cover and on-course support</strong><br>
+      Professional medical presence throughout the event, plus marshals and
+      volunteers keeping an eye on runners as the hours progress.
+    </li>
+
+    <li>
+      <strong>Clear, well-marked course</strong><br>
+      A fully marked loop through the trails and parkland of Blaise Castle Estate.
+      No navigation required — your only job is to manage pace, recovery, and mindset.
+    </li>
+
+    <li>
+      <strong>An inclusive, runner-first atmosphere</strong><br>
+      Whether you’re aiming for one loop or pushing deep into the night,
+      this is an event where every runner is respected and supported.
+      No ego, no pressure — just shared challenge.
+    </li>
+
+    <li>
+      <strong>A test of strategy, not speed</strong><br>
+      Backyard Ultras reward patience, consistency, and decision-making.
+      You’ll have time between laps to eat, rest, and reset — as much a mental
+      challenge as a physical one.
+    </li>
+
+    <li>
+      <strong>A memorable day (and night) on the trails</strong><br>
+      From early daylight laps to the quiet hours after dark, this event offers
+      a unique progression that few races can match — one hour at a time.
+    </li>
   </ul>
 </section>
 
