--- a/index.html
+++ b/index.html
@@ -205,23 +205,40 @@
 
 <section id="about">
   <h2>What is a Backyard Ultra?</h2>
+
   <p>
-    The Bristol Backyard Ultra is not a typical ultramarathon. It is a simple, relentless 
-    test of patience, pacing, and mental resolve, set within the historic parkland and
-    woodland trails of Blaise Castle Estate in Bristol — close to the city, yet removed 
-    from it entirely. There is no finish line to chase, no target time, and no fixed 
-    distance. Just a loop, a bell, and one question asked again every hour: can you go again?
-    The event follows the classic Backyard Ultra (Last One Standing) format. 
-    Runners complete a 4.167-mile (6.7 km) trail loop every hour, on the hour. 
-    You have 60 minutes to complete each loop. Finish early and you rest. Finish late,
-    or fail to make the start line when the bell rings, and your race is over.
-    This repeats. Hour after hour. The event continues until only one runner remains. 
-    That final runner must complete one last solo loop to be crowned Last One Standing.
+    The Bristol Backyard Ultra is not a typical ultramarathon. It is a simple,
+    relentless test of patience, pacing, and mental resolve, set within the
+    historic parkland and woodland trails of Blaise Castle Estate in Bristol —
+    close to the city, yet removed from it entirely.
+  </p>
+
+  <p>
+    <strong>There is no finish line to chase, no target time, and no fixed distance.</strong>
+    Just a loop, a bell, and one question asked again every hour:
+    <em>can you go again?</em>
+  </p>
+
+  <p>
+    The event follows the classic Backyard Ultra (Last One Standing) format.
+    Runners complete a 4.167-mile (6.7 km) trail loop every hour, on the hour.
+    You have 60 minutes to complete each loop. Finish early and you rest.
+    Finish late, or fail to make the start line when the bell rings, and your race is over.
+  </p>
+
+  <p>
+    This repeats. Hour after hour. The event continues until only one runner remains.
+    That final runner must complete one last solo loop to be crowned
+    <strong>Last One Standing</strong>.
+  </p>
+
+  <p>
     Every other participant, regardless of the distance they cover, is recorded as a DNF.
-    This is not a race about speed. It is about pacing, recovery, decision-making, and 
-    managing the mental challenge of repetition.
+    This is not a race about speed. It is about pacing, recovery, decision-making,
+    and managing the mental challenge of repetition.
   </p>
 </section>
+
 
 <section id="course">
   <h2>The Course</h2>
