--- a/index.html
+++ b/index.html
@@ -203,13 +203,20 @@
   <p>
     The event follows the classic Backyard Ultra (Last One Standing) format.
     Runners complete a 4.167-mile (6.7 km) trail loop every hour, on the hour.
-    You have 60 minutes to complete each loop.
+    You have 60 minutes to complete each loop. Finish early and you rest.
+    Finish late, or fail to make the start line when the bell rings, and your race is over.
   </p>
 
   <p>
     This repeats. Hour after hour. The event continues until only one runner remains.
     That final runner must complete one last solo loop to be crowned
     <strong>Last One Standing</strong>.
+  </p>
+
+  <p>
+    Every other participant, regardless of the distance they cover, is recorded as a DNF.
+    This is not a race about speed. It is about pacing, recovery, decision-making,
+    and managing the mental challenge of repetition.
   </p>
 </section>
 
